--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-	"name": "runmynodebot",
-	"version": "1.2.2",
-	"description": "Runs your nodebot",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/Mike111177/runmynodebot.git"
-	},
-	"keywords": [
-		"nodebot",
-		"letsrobot.tv",
-		"runmyrobot"
-	],
-	"author": "Mike111177",
-	"license": "GPL-3.0",
-	"bugs": {
-		"url": "https://github.com/Mike111177/runmynodebot/issues"
-	},
-	"homepage": "https://github.com/Mike111177/runmynodebot#readme",
-	"dependencies": {
-		"johnny-five": "^0.11.3",
-		"js-yaml": "^3.9.1",
-		"socket.io-client": "^2.0.3",
-		"yargs": "^8.0.2",
-		"colors": "^1.1.2"
-	},
-	"bin": {
-		"runmynodebot": "./runmynodebot.js"
-	}
+  "name": "runmynodebot",
+  "version": "1.2.2",
+  "description": "Runs your nodebot",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mike111177/runmynodebot.git"
+  },
+  "keywords": [
+    "nodebot",
+    "letsrobot.tv",
+    "runmyrobot"
+  ],
+  "author": "Mike111177",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/Mike111177/runmynodebot/issues"
+  },
+  "homepage": "https://github.com/Mike111177/runmynodebot#readme",
+  "dependencies": {
+    "colors": "^1.1.2",
+    "flite": "^0.1.2",
+    "ip": "^1.1.5",
+    "johnny-five": "^0.11.3",
+    "js-yaml": "^3.10.0",
+    "promise": "^8.0.1",
+    "socket.io-client": "^2.0.3",
+    "temp": "^0.8.3",
+    "yargs": "^8.0.2"
+  },
+  "bin": {
+    "runmynodebot": "./runmynodebot.js"
+  }
 }
